test/syntax-errors/instruction7.sos
# instruction ne peut pas commencer par *

case 1 in 
	1 ) id = 1 ; 
	* | 1 ) id = 0 ;;
esac